--- a/dashboard1.html
+++ b/dashboard1.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>     -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Planner Dashboard</title>
   <link rel="stylesheet" href="dashboard1.css">
 </head>
 <body>
+  
   <div class="sidebar">
-    <h2>Event Planner</h2>
+   <img src="S-removebg-preview.png" height="100px" width="120px" id="logo">
     <ul>
       <li><a href="#">Dashboard</a></li>
       <li><a href="#">Upcoming Events</a></li>
@@ -24,11 +35,28 @@
       <h1>Welcome, Event Organizer</h1>
     </header>
 
-   
-    <section class="calendar-section">
-      <h2>Event Calendar</h2>
-      <div id="calendar"></div>
-    </section>
+      <div class="wrapper">
+        <header>
+          <p class="high">Create Events</p>
+          <p class="current-date"></p>
+          <div class="icons" >
+            <span id="prev" class="material-symbols-rounded"></span>
+            <span id="next" class="material-symbols-rounded"></span>
+          </div>
+        </header>
+        <div class="calendar">
+          <ul class="weeks">
+            <li>Sun</li>
+            <li>Mon</li>
+            <li>Tue</li>
+            <li>Wed</li>
+            <li>Thu</li>
+            <li>Fri</li>
+            <li>Sat</li>
+          </ul>
+          <ul class="days"></ul>
+        </div>
+      </div>
 
     <section class="event-table">
       <h2>Recent Events</h2>
@@ -121,12 +149,17 @@
           <option value="Lighting">Lighting</option>
         </select>
 
-        <button type="submit">Submit</button>
+        <button type="submit" id="submit">Submit</button>
       </form>
       <div id="formData"></div>
     </section>
   </div>
 
   <script src="dashboard1.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 </html>
+
+
+
+
