--- a/Expense Tracker.html
+++ b/Expense Tracker.html
@@ -34,7 +34,7 @@
           <li class="nav-item">
             <a class="nav-link" href="About.html">ABOUT</a>
           </li>
-          <a class="navbar-brand d-none d-md-block" href="#">
+          <a class="navbar-brand d-none d-md-block" href="Home.html">
             <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
           </a>
           <li class="nav-item">
