--- a/dashboard1.html
+++ b/dashboard1.html
@@ -21,18 +21,18 @@
   <div class="sidebar">
    <img src="S-removebg-preview.png" height="100px" width="120px" id="logo">
     <ul>
-      <li><a href="#">Dashboard</a></li>
-      <li><a href="#">Upcoming Events</a></li>
-      <li><a href="#">Past Events</a></li>
-      <li><a href="#">Create Event</a></li>
-      <li><a href="#">Settings</a></li>
-      <li><a href="#">Logout</a></li>
+    <li><a href="Home.html">HOME</a></li>
+      <li><a href="About.html">ABOUT</a></li>
+      <li><a href="portfolio.html">PORTFOLIO</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="Expense Tracker.html">EXPENSE TRACKER</li>
+      <li><a href="services.html">SERVICES</a></li>
     </ul>
   </div>
 
   <div class="main-content">
     <header>
-      <h1>Welcome, Event Organizer</h1>
+      <h1>DASHBOARD</h1>
     </header>
 
       <div class="wrapper">
