--- a/contact.html
+++ b/contact.html
@@ -118,13 +118,12 @@
       </form> </div><br><br>
 
 
-<!-- MODAL SECTION-->
-<center><button id="feed" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#feedbackModal">
 
-<!-- MODAL SECTION
-<center><button id="feed" type="button" class="btn " data-bs-toggle="modal" data-bs-target="#feedbackModal">
+<!-- MODAL SECTION -->
+<center><button id="feed" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#feedbackModal">
   Give Feedback
 </button></center>
+
 <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -132,7 +131,7 @@
         <h5 class="modal-title" id="feedbackModalLabel">Feedback</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body text-center">
+      <div class="modal-body text-center" id="feedbackForm">
         <h3>How are you feeling?</h3>
         <p>Your input is valuable in helping us better understand your needs and tailor our service accordingly.</p>
         <div class="d-flex justify-content-around my-4">
@@ -147,21 +146,56 @@
         </div>
         <button type="button" class="btn btn-success w-100" id="bu">Submit Now</button>
       </div>
+
+      <!-- Thank You message -->
+      <div class="modal-body text-center d-none" id="thankYouMessage">
+        <h3>Thank You!</h3>
+        <p>We appreciate your feedback.</p>
+      </div>
     </div>
   </div>
-</div> -->
+</div> 
 
-<!-- for EVAL-2 -->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
+    // Handle emoji selection
     document.querySelectorAll('.emoji').forEach(emoji => {
         emoji.addEventListener('click', function() {
             document.querySelectorAll('.emoji').forEach(e => e.classList.remove('selected'));
             this.classList.add('selected');
         });
     });
+
+    // Handle form submission
+    document.getElementById('bu').addEventListener('click', function() {
+        // Get the selected emoji and comment
+        const selectedEmoji = document.querySelector('.emoji.selected').textContent;
+        const comment = document.querySelector('textarea').value;
+
+        // Log the values (for debugging or use as needed)
+        console.log('Selected Emoji:', selectedEmoji);
+        console.log('Comment:', comment);
+
+        // Hide feedback form and show Thank You message
+        document.getElementById('feedbackForm').classList.add('d-none');
+        document.getElementById('thankYouMessage').classList.remove('d-none');
+
+        // Automatically close modal after a short delay
+        setTimeout(() => {
+            var modalElement = document.getElementById('feedbackModal');
+            var modalInstance = bootstrap.Modal.getInstance(modalElement);
+            modalInstance.hide();
+
+            // Reset the form and message for future use
+            document.getElementById('feedbackForm').classList.remove('d-none');
+            document.getElementById('thankYouMessage').classList.add('d-none');
+            document.querySelector('textarea').value = '';
+            document.querySelectorAll('.emoji').forEach(e => e.classList.remove('selected'));
+        }, 2000); // 2 seconds delay before closing the modal
+    });
 </script>
+
 
   
       <!-- FOOTER SECTION -->
