--- a/React/Cosmic-App/index.html
+++ b/React/Cosmic-App/index.html
@@ -7,6 +7,7 @@
     <title>Cosmic Occasions </title>
   </head>
   <!-- Bootstrap JavaScript and Popper.js -->
+  <link href="https://fonts.googleapis.com/css2?family=YourFont&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
